2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: fix typo in hex_digit

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodevariabledeclarator.vala,
	  gobject/valaccodegenerator.vala: 0-initialize temporary struct
	  variables to avoid passing uninitialized structs by reference,
	  fixes bug 513144

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix casts to delegate types

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaarraytype.vala, vala/valadatatype.vala,
	  vala/valaintegertype.vala, vala/valanulltype.vala,
	  vala/valapointertype.vala, vala/valasemanticanalyzer.vala,
	  vala/valasymbolresolver.vala, vala/valaunresolvedtype.vala,
	  ccode/valaccodeassignment.vala, ccode/valaccodebinaryexpression.vala,
	  gobject/valaccodegenerator.vala: add more non-null warnings

2008-01-31  Jürg Billeter  <j@bitron.ch>

	* vapi/atk.vapi, vapi/gdk-pixbuf-2.0.vapi, vapi/gstreamer-0.10.vapi,
	  vapi/gstreamer-controller-0.10.vapi,
	  vapi/gstreamer-interfaces-0.10.vapi, vapi/gstreamer-rtsp-0.10.vapi,
	  vapi/gstreamer-video-0.10.vapi, vapi/gtk+-2.0.vapi,
	  vapi/poppler-glib.vapi: regenerated

2008-01-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gnome-desktop-2.0/: update to gnome-desktop 2.21.90

	* vapi/gnome-desktop-2.0.vapi: regenerated

2008-01-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/pango/: update to pango 1.19.3

	* vapi/pango.vapi: regenerated

2008-01-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: update to glib 2.15.4

	* vapi/gio-2.0.vapi: regenerated

2008-01-31  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/libsoup-2.4.deps, vapi/libsoup-2.4.vapi,
	  vapi/packages/libsoup-2.4/: add libsoup-2.4 bindings

2008-01-30  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add GBookmarkFile bindings,
	  patch by Emmanuele Bassi, fixes bug 513059

2008-01-30  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add GSequence bindings,